--- a/src/main/resources/templates/categories/category-edit.html
+++ b/src/main/resources/templates/categories/category-edit.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-  <title>Редагування категорії</title>
-  <link rel="stylesheet" th:href="@{/css/style.css}"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-          crossorigin="anonymous"></script>
-</head>
+<html lang="ua" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragments/head :: head}"></head>
 <body>
+<div th:replace="~{fragments/header :: header}"></div>
+<main class="container mt-5">
 <h1>Редагувати категорію</h1>
 <form th:action="@{/categories/edit/{id}(id=${category.id})}"
       th:object="${category}" method="post">
@@ -24,5 +18,6 @@
   <button type="submit" class="btn btn-success">Оновити</button>
   <a href="/categories" class="btn btn-secondary">Зберегти</a>
 </form>
-</body>
+</main>
+<div th:replace="~{fragments/footer :: footer}"></div>
 </html>
