--- a/src/main/resources/templates/categories/category-edit.html
+++ b/src/main/resources/templates/categories/category-edit.html
@@ -3,7 +3,14 @@
 <head th:replace="~{fragments/head :: head}"></head>
 <body>
 <div th:replace="~{fragments/header :: header}"></div>
-<main class="container mt-5">
+
+<div class="page-wrapper">
+  <div class="background-wrapper">
+    <div class="cityscape"></div>
+    <div class="smoke-effect"></div>
+  </div>
+
+  <main class="container mt-5 content">
 <h1>Редагувати категорію</h1>
 <form th:action="@{/categories/edit/{id}(id=${category.id})}"
       th:object="${category}" method="post">
@@ -20,4 +27,6 @@
 </form>
 </main>
 <div th:replace="~{fragments/footer :: footer}"></div>
+</div>
+</body>
 </html>
