--- a/src/main/resources/templates/categories/category-list.html
+++ b/src/main/resources/templates/categories/category-list.html
@@ -3,40 +3,37 @@
 <head th:replace="~{fragments/head :: head}"></head>
 <body>
 <div th:replace="~{fragments/header :: header}"></div>
-<main class="container mt-5">
-<h1>Категорії</h1>
-<a href="/categories/add" class="btn btn-primary">Додати нову категорію</a>
 
+<div class="page-wrapper">
+  <div class="background-wrapper">
+    <div class="cityscape"></div>
+    <div class="smoke-effect"></div>
+    <div class="cityscape-revers"></div>
+  </div>
 
-  <div th:if="${message}" class="alert alert-success">
-  <span th:text="${message}"></span>
+  <main class="container mt-5 content">
+    <h1>Категорії</h1>
+    <br>
+    <div th:if="${message}" class="alert alert-success">
+      <span th:text="${message}"></span>
+    </div>
+
+    <div class="row">
+      <div th:each="category : ${categories}" class="col-md-3 mb-4">
+        <a th:href="@{/categories/{id}/products(id=${category.id})}" class="category-card-link">
+          <div class="category-card" th:style="'background-image: url(' + ${category.imageUrl} + ')'">
+            <div class="category-card-overlay">
+              <h3 class="category-card-title" th:text="${category.name}"></h3>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </main>
+
 </div>
 
-<table class="table">
-  <thead>
-  <tr>
-    <th>Назва</th>
-    <th>Зображення</th>
-    <th>Дії</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="category : ${categories}">
-    <td th:text="${category.name}"></td>
-    <td>
-      <img th:src="${category.imageUrl}" alt="Category Image" width="200" height="200">
-    </td>
-    <td>
-      <a th:href="@{/categories/edit/{id}(id=${category.id})}" class="btn btn-warning">Редагувати</a>
-      <a th:href="@{/categories/{id}/products(id=${category.id})}" class="btn btn-info">Переглянути товари</a>
-      <a th:href="@{/categories/delete/{id}(id=${category.id})}"
-         class="btn btn-danger"
-         onclick="return confirm('Ви впевнені?')">Видалити</a>
-    </td>
-  </tr>
-  </tbody>
-</table>
-</main>
+
 <div th:replace="~{fragments/footer :: footer}"></div>
 </body>
 </html>
