--- a/src/main/resources/templates/products/product-details.html
+++ b/src/main/resources/templates/products/product-details.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="ua" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head :: head}"></head>
-
+<body>
 <div th:replace="~{fragments/header :: header}"></div>
-<main class="container mt-5">
+
+<div class="page-wrapper">
+  <div class="background-wrapper">
+    <div class="cityscape"></div>
+    <div class="smoke-effect"></div>
+    <div class="cityscape-revers"></div>
+  </div>
+
+  <main class="container mt-5 content">
 
   <h1>Про товар</h1>
   <div th:if="${product}">
@@ -40,4 +48,6 @@
 
 </main>
 <div th:replace="~{fragments/footer :: footer}"></div>
+</div>
+</body>
 </html>
