--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="uk" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,21 +12,25 @@
       background-color: #f4f4f4;
       text-align: center;
     }
+
     header {
       background: #333;
       color: #fff;
       padding: 15px 0;
       font-size: 24px;
     }
+
     nav {
       margin: 20px 0;
     }
+
     nav a {
       margin: 0 15px;
       text-decoration: none;
       color: #333;
       font-size: 18px;
     }
+
     .container {
       max-width: 800px;
       margin: 20px auto;
@@ -35,6 +39,7 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
     }
+
     footer {
       margin-top: 20px;
       padding: 10px;
@@ -60,7 +65,13 @@
 <div class="container">
   <h1>Вітаємо на домашній сторінці!</h1>
   <p>Це простий HTML-документ для демонстрації базової структури веб-сторінки.</p>
+  <p th:text="${session.user.email}"></p>
 </div>
+
+<div th:if="${session.user != null}">
+  <a href="/dashboard">Перейти на панель управління</a>
+</div>
+
 
 <footer>
   &copy; 2025 Всі права захищені.
