--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,25 +7,14 @@
 <div class="page-wrapper">
   <div class="background-wrapper">
     <div class="cityscape"></div>
+    <div class="cityscape-revers"></div>
     <div class="smoke-effect"></div>
   </div>
 
   <main class="container mt-5 content">
 
 
-    <nav>
-      <a href="#">Головна</a>
-      <a href="#">Про нас</a>
-      <a href="#">Контакти</a>
-      <a href="register.html">Реєстрація</a>
-      <a href="http://localhost:5000/swagger-ui/index.html">Swagger</a>
 
-    </nav>
-
-    <div class="container">
-      <h1>Вітаємо на домашній сторінці!</h1>
-      <p>Це простий HTML-документ для демонстрації базової структури веб-сторінки.</p>
-    </div>
   </main>
   <div th:replace="~{fragments/footer :: footer}"></div>
 </div>
