--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Register</h1>
-<form th:action="@{/user/register}" method="post">
+<form th:action="@{/auth/register}" method="post">
   <div>
     <label for="firstName">First Name:</label>
     <input type="text" id="firstName" name="firstName">
