--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 <div th:if="${param.user}">
   You are already logged in.
 </div>
-<form th:action="@{/user/login}" method="post">
+<form th:action="@{/auth/login}" method="post">
   <div>
     <label for="email">Email:</label>
     <input type="text" id="email" name="email">
