added filtering and sorting

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,7 @@
     <div class="header-left">
       <div class="header-nav">
         <a href="/categories" class="nav-link">
-          <i class="bi bi-list"></i> КАТЕГОРІЇ
+          <i class="bi bi-card-list"></i> КАТЕГОРІЇ
         </a>
         <a href="/products" class="nav-link">
           <i class="bi bi-box"></i> ПРОДУКТИ
