--- a/src/main/resources/templates/products/product-list.html
+++ b/src/main/resources/templates/products/product-list.html
@@ -13,25 +13,49 @@
 
   <main class="container mt-5 content">
     <div class="row">
-      <div class="col-md-2">
-        <h2>Категорії</h2>
-        <ul class="list-group">
-          <li th:each="cat, iterStat : ${categories}"
-              th:if="${iterStat.index < 4}"
-              class="list-group-item d-flex align-items-center">
-            <a th:href="@{/categories/{id}/products(id=${cat.id})}"
-               th:text="${cat.name}"
-               class="stretched-link"></a>
-          </li>
-          <li class="list-group-item d-flex align-items-center">
-            <a th:href="@{/categories}" class="stretched-link">
-              <i class="fas fa-list me-2"></i>
-              Всі категорії
-            </a>
-          </li>
-        </ul>
+      <div class="col-md-3">
+        <div class="sorting-block">
+          <h2>Сортування</h2>
+          <form id="filterSortForm">
+            <div class="mb-3">
+              <label for="minPrice">Мінімальна ціна</label>
+              <input type="number" id="minPrice" name="minPrice" class="form-control" placeholder="Від">
+            </div>
+            <div class="mb-3">
+              <label for="maxPrice">Максимальна ціна</label>
+              <input type="number" id="maxPrice" name="maxPrice" class="form-control" placeholder="До">
+            </div>
+            <div class="mb-3">
+              <label for="inStock">Наявність на складі</label>
+              <select id="inStock" name="inStock" class="form-control">
+                <option value="">Всі</option>
+                <option value="true">В наявності</option>
+                <option value="false">Немає в наявності</option>
+              </select>
+            </div>
+
+            <div class="mb-3">
+              <label for="sortBy">Сортувати за:</label>
+              <select id="sortBy" name="sortBy" class="form-control">
+                <option value="price">Ціною</option>
+                <option value="name">Назвою</option>
+                <option value="createdAt">Датою додавання</option>
+                <option value="stock">Кількістю на складі</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="sortDirection">Напрямок:</label>
+              <select id="sortDirection" name="sortDirection" class="form-control">
+                <option value="asc">За зростанням</option>
+                <option value="desc">За спаданням</option>
+              </select>
+            </div>
+
+            <button type="submit" class="btn btn-sort">Застосувати</button>
+          </form>
+        </div>
       </div>
-      <div class="col-md-10">
+      <div class="col-md-9">
 
         <h1>Наш асортимент</h1>
 
@@ -52,7 +76,7 @@
 
             <div class="row mt-4, background" th:unless="${products.isEmpty()}">
               <div th:each="product : ${products}" class="col-md-3">
-                <div class="card mb-5">
+                <div class="card mb-5" th:classappend="${product.stock <= 0} ? 'disabled' : ''">
                   <img th:src="${product.imageUrl}" class="card-img-top" th:alt="${product.name}">
                   <div class="card-body">
                     <h5 class="card-title" th:text="${product.name}"></h5>
@@ -64,7 +88,11 @@
                     <a th:href="@{/products/{id}(id=${product.id})}" class="btn btn-outline-dark" title="Детальніше">
                       <i class="fas fa-info-circle me-2"></i>Детальніше
                     </a>
-                    <a href="#" class="btn btn-outline-dark" title="Додати до кошика">
+                    <a href="#" class="btn btn-outline-dark" title="Додати до кошика" th:if="${product.stock > 0}">
+                      <i class="fas fa-shopping-cart"></i>
+                    </a>
+                    <a href="#" class="btn btn-outline-dark disabled" title="Додати до кошика"
+                       th:unless="${product.stock > 0}">
                       <i class="fas fa-shopping-cart"></i>
                     </a>
                   </div>
@@ -81,34 +109,55 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
+      const filterSortForm = document.getElementById('filterSortForm');
       const searchInput = document.getElementById('searchInput');
       const productsContainer = document.getElementById('productsContainer');
 
+      function updateProducts() {
+        const searchTerm = searchInput.value;
+        const minPrice = document.getElementById('minPrice').value;
+        const maxPrice = document.getElementById('maxPrice').value;
+        const inStock = document.getElementById('inStock').value;
+        const sortBy = document.getElementById('sortBy').value;
+        const sortDirection = document.getElementById('sortDirection').value;
 
-      searchInput.addEventListener('input', function () {
-        const searchTerm = this.value;
+        const queryParams = new URLSearchParams({
+          searchTerm: searchTerm || "",
+          minPrice: minPrice || "",
+          maxPrice: maxPrice || "",
+          inStock: inStock || "",
+          sortBy: sortBy,
+          sortDirection: sortDirection
+        });
 
-        if (searchTerm.length < 2) {
-          fetch('/products')
-            .then(response => response.text())
-            .then(html => {
-              const tempDiv = document.createElement('div');
-              tempDiv.innerHTML = html;
-              const newProductsGrid = tempDiv.querySelector('#productsContainer > div');
-              productsContainer.innerHTML = newProductsGrid.innerHTML;
-            });
-          return;
-        }
-
-        fetch(`/products/search?searchTerm=${encodeURIComponent(searchTerm)}`)
+        fetch(`/products/filter-sort-search?${queryParams}`)
           .then(response => response.text())
           .then(html => {
-            const tempDiv = document.createElement('div');
-            tempDiv.innerHTML = html;
-            const newProductsGrid = tempDiv.querySelector('div');
-            productsContainer.innerHTML = newProductsGrid.innerHTML;
+            productsContainer.innerHTML = html;
           })
-          .catch(error => console.error('Помилка пошуку:', error));
+          .catch(error => console.error('Помилка:', error));
+      }
+
+      searchInput.addEventListener('input', updateProducts);
+
+      filterSortForm.addEventListener('submit', function (event) {
+        event.preventDefault();
+        updateProducts();
+      });
+    });
+
+  </script>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const productsContainer = document.getElementById('productsContainer');
+
+      productsContainer.addEventListener('click', function (event) {
+        const addToCartButton = event.target.closest('.btn-outline-dark[title="Додати до кошика"]');
+        if (addToCartButton && addToCartButton.classList.contains('disabled')) {
+          event.preventDefault();
+          alert('Товару немає на складі. Додавання до кошика неможливе.');
+        }
       });
     });
   </script>
